tests/error/comprehension_errors/borrow_leaked1.err
Error: Drop violation (at $FILE:17:16)
   | 
15 | @guppy(module)
16 | def foo(n: int, q: qubit @owned) -> list[int]:
17 |     return [bar(q) for _ in range(n)]
   |                 ^ Variable `q` with non-droppable type `qubit` is leaked

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
